# bq-mcp-py

./: .gitignore  .pre-commit-config.yaml  README.md  bq-mcp.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
