[project]
name = "bq-mcp-py"
version = "0.1.0"
description = "BigQuery MCP server for schema inspection"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
bq-mcp-py = "bq-mcp:main"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.12.3",
    "pre-commit>=3.0.0",
]
